Fixing spacing issues in the events section of news/events

--- a/css/style.css
+++ b/css/style.css
@@ -2714,6 +2714,10 @@ h4 {
 
 /* Events */
 
+.new_events_wide_left .pane-event-carousel-page {
+	min-height: 1px	!important;
+}
+
 div.panels-flexible-row-ne_test-6 h2, div.new_events_wide_left h2 {
 	background-color: transparent;
 	color: #7b2320;
